--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd packages/react-frontend; npm start",
+    "start": "cd packages/travel-project-frontend; npm start",
     "dev": "cd packages/expressjs-backend; npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
