--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "expressjs-backend",
   "version": "1.0.0",
-  "type": "module",
-  "main": "src/backend.ts",
+  "main": "dist/backend.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node src/backend.ts",
+    "start": "npm run build && node dist/backend.js"
   },
   "author": "Seamus O'Malley",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "typescript": "^5.2.2"
   }
 }
