--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
