add all endpoints and update scripting

--- a/envs/dev.env
+++ b/envs/dev.env
@@ -1,3 +1,3 @@
 ENV=dev
 
-DATABASE_URL='mysql://qxb1u0f4njz2120f5uuy:pscale_pw_SdnQIVpG0MnaUNS75Z8p9q2R4Mdnv90rFF0QilYyiyR@aws.connect.psdb.cloud/307-travel-project?sslaccept=strict'
+DATABASE_URL='mysql://29avzj5nqk8tm1v6tqcl:pscale_pw_WRaCujE9U0D370BgtccwHiisgGpubaayVYU14dmwUg4@aws.connect.psdb.cloud/307-travel-project?sslaccept=strict'
