--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "setup": "npm i && cp envs/dev.env .env && npx prisma generate",
+    "migrate": "npm run setup && npx prisma db push",
+    "format": "npx prisma format",
+    "validate": "npx prisma validate",
     "start": "cd packages/travel-project-frontend; npm start",
-    "dev": "cd packages/travel-project-backend && npm start",
+    "serve": "cd packages/travel-project-backend && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
