--- a/envs/dev.env
+++ b/envs/dev.env
@@ -1,3 +1,3 @@
 ENV=dev
 
-DATABASE_URL='mysql://29avzj5nqk8tm1v6tqcl:pscale_pw_WRaCujE9U0D370BgtccwHiisgGpubaayVYU14dmwUg4@aws.connect.psdb.cloud/307-travel-project?sslaccept=strict'
+DATABASE_URL='mysql://tr1foqy9yr6gojjbtdu0:pscale_pw_PBByaL1O7thc57xRCrlXFbt19nxoqXRo1RVD7Q290O8@aws.connect.psdb.cloud/307-travel-project?sslaccept=strict'
