--- a/.github/workflows/ci-testing.yaml
+++ b/.github/workflows/ci-testing.yaml
@@ -7,12 +7,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v16
+      - uses: actions/setup-node@v3
         with:
-          node-version: 20
-      - run: npm ci
-      - run: npm run -w travel-project-backend lint
-      - run: npm run -w travel-project-frontend lint
-      - run: npm run -w travel-project-frontend build
+          node-version: 16
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Lint frontend
+        run: npm run -w travel-project-backend lint
+
+      - name: Lint backend
+        run: npm run -w travel-project-frontend lint
+
+      - name: Build project
+        run: npm run -w travel-project-frontend build
