--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "307-react-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/App.tsx",
   "scripts": {
     "setup": "npm i && cp envs/dev.env .env && npx prisma generate",
     "migrate": "npm run setup && npx prisma db push",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "yarn": "^1.22.21"
   }
 }
