--- a/packages/travel-project-frontend/package.json
+++ b/packages/travel-project-frontend/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.0.3"
   },
   "scripts": {
+    "lint": "npm run lint",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
