--- a/packages/travel-project-frontend/package.json
+++ b/packages/travel-project-frontend/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-n": "^16.3.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "react-router-dom": "^6.18.0"
   },
   "scripts": {
     "lint": "npm run lint",
