--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -23,14 +23,14 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --workspaces=false
           npm run -w travel-project-backend build --if-present
           npm run -w travel-project-backend test --if-present
         working-directory: packages/travel-project-backend
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
-        working-directory: packages/express-backend
+        working-directory: packages/travel-project-backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
