--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run -w packages/travel-project-backend build --if-present
-          npm run -w packages/travel-project-backend test --if-present
+          npm install --workspaces=false
+          npm run -w travel-project-backend build --if-present
+          npm run -w travel-project-backend test --if-present
         working-directory: packages/travel-project-backend
 
       - name: Zip artifact for deployment
