--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@prisma/client": "5.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
