--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -24,8 +24,8 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --workspaces=false
-          npm run build --if-present
-          npm run test --if-present
+          npm run -w travel-project-backend build --if-present
+          npm run -w travel-project-backend test --if-present
         working-directory: packages/travel-project-backend
 
       - name: Zip artifact for deployment
