--- a/packages/travel-project-frontend/package.json
+++ b/packages/travel-project-frontend/package.json
@@ -34,7 +34,7 @@
     "@prisma/client": "5.6.0"
   },
   "scripts": {
-    "lint": "npm run lint",
+    "lint": "eslint --ext .tsx src",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
