--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint --ext .tsx src/*",
+    "lint": "eslint '**/*/*.ts'",
     "start": "ts-node src/index.ts",
     "build": "tsc"
   },
