--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -52,7 +52,8 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: release.zip
+        working-directory: packages/travel-project-backend
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
