--- a/packages/travel-project-frontend/package.json
+++ b/packages/travel-project-frontend/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "lint": "eslint --ext .tsx src/**",
+    "lint": "eslint '**/*.tsx'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
