finding build artifact

--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -52,7 +52,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: release.zip
+        run: unzip release.zip
         working-directory: packages/travel-project-backend
 
       - name: 'Deploy to Azure Web App'
