finding build artifact

--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: packages/travel-project-backend/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,7 +53,6 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-        working-directory: packages/travel-project-backend
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
