--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "description": "",
   "main": "src/App.tsx",
   "scripts": {
-    "setup": "npm i && cp envs/dev.env .env && npx prisma generate",
+    "setup": "npm i && cp envs/dev.env .env && npx prisma generate && cp packages/travel-project-frontend/envs/dev.env packages/travel-project-frontend/.env",
+    "lint": "cd packages/travel-project-frontend && npm run lint && cd ../travel-project-backend && npm run lint",
     "migrate": "npm run setup && npx prisma db push",
     "format": "npx prisma format",
     "validate": "npx prisma validate",
-    "start": "cd packages/travel-project-frontend; npm start",
+    "start": "cd packages/travel-project-frontend && npm start",
     "serve": "cd packages/travel-project-backend && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "workspaces": [
-    "packages/travel-project-frontend",
-    "packages/travel-project-backend"
+    "packages/*"
   ],
   "devDependencies": {
     "prisma": "^5.5.2"
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
-    "react-router-dom": "^6.18.0",
-    "yarn": "^1.22.21"
+    "react-router-dom": "^6.18.0"
   }
 }
