--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -12,8 +12,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "@prisma/client": "5.6.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
