--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "setup": "cp envs/dev.env .env",
     "lint": "eslint . --fix",
     "start": "ts-node src/index.ts",
     "build": "tsc"
@@ -12,6 +13,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
