update ci and fix backend cd

--- a/.github/workflows/ci-testing.yaml
+++ b/.github/workflows/ci-testing.yaml
@@ -20,8 +20,11 @@ jobs:
       - name: Lint frontend
         run: npm run -w packages/travel-project-frontend lint
 
+      - name: Build frontend
+        run: npm run -w packages/travel-project-frontend build
+
       - name: Lint backend
         run: npm run -w packages/travel-project-backend lint
 
-      - name: Build project
-        run: npm run -w packages/travel-project-frontend build
+      - name: Build backend
+        run:  npm run -w packages/travel-project-backend build
