--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "npx prisma format",
     "validate": "npx prisma validate",
     "start": "cd packages/travel-project-frontend && npm start",
-    "serve": "cd packages/travel-project-backend && npm start",
+    "serve": "cd packages/travel-project-backend && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
