--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "setup": "cp envs/dev.env .env",
     "lint": "eslint . --fix",
-    "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "serve": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js",
+    "test": "echo \"placeholder test\""
   },
   "author": "Seamus O'Malley",
   "license": "ISC",
@@ -31,6 +33,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
