backend build on PR, but deploy on push

--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -39,6 +43,7 @@ jobs:
           path: packages/travel-project-backend/release.zip
 
   deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     environment:
