--- a/.github/workflows/main_travel-hub.yml
+++ b/.github/workflows/main_travel-hub.yml
@@ -28,6 +28,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --workspaces=false
+          npm run prepare-build --if-present
           npm run build --if-present
           npm run test --if-present
         working-directory: packages/travel-project-backend
