--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -6,7 +6,7 @@
     "setup": "cp envs/dev.env .env",
     "lint": "eslint . --fix",
     "serve": "ts-node src/index.ts",
-    "prebuild": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
+    "prepare-build": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "test": "echo \"placeholder test\""
