--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
