--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -8,7 +8,7 @@
     "serve": "ts-node src/index.ts",
     "prepare-build": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npm i && npx prisma generate && node dist/index.js",
     "test": "echo \"placeholder test\""
   },
   "author": "Seamus O'Malley",
@@ -18,8 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "ts-node": "^10.9.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
@@ -36,6 +35,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1"
   }
 }
