--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -8,7 +8,7 @@
     "serve": "ts-node src/index.ts",
     "prepare-build": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
     "build": "tsc",
-    "start": "npm i && npx prisma generate && node dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"placeholder test\""
   },
   "author": "Seamus O'Malley",
@@ -18,9 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
+    "jsonwebtoken": "^9.0.2",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
