--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -8,7 +8,7 @@
     "serve": "ts-node src/index.ts",
     "prepare-build": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npm install && npx prisma generate && node dist/index.js",
     "test": "echo \"placeholder test\""
   },
   "author": "Seamus O'Malley",
