--- a/packages/travel-project-backend/package.json
+++ b/packages/travel-project-backend/package.json
@@ -6,15 +6,21 @@
     "setup": "cp envs/dev.env .env",
     "lint": "eslint . --fix",
     "serve": "ts-node src/index.ts",
-    "prepare-build": "cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && cp envs/prod.env .env",
-    "build": "tsc",
-    "start": "cp envs/prod.env .env && npm install && npx prisma generate && npm run build && node dist/index.js",
+    "setup-deploy": "cp envs/prod.env .env && cp ../../prisma/schema.prisma schema.prisma && npx prisma generate && tsc",
+    "start": "node dist/index.js",
     "test": "echo \"placeholder test\""
   },
-  "author": "Seamus O'Malley",
+  "author": "Calvin Van Oss",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
@@ -22,9 +28,6 @@
     "@types/node": "^20.10.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -32,8 +35,6 @@
     "eslint-plugin-n": "^16.3.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
